// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dvaas;

import "dvaas/test_vector.proto";
import "google/protobuf/any.proto";
import "p4/config/v1/p4info.proto";
import "p4_infra/p4_pdpi/ir.proto";

message DvaasRegressionTestProto {
  PacketTestVector test_vector = 1;
  pdpi.IrEntities entities = 2;
  p4.config.v1.P4Info p4info = 3;
  bool currently_failing = 4;
  .google.protobuf.Any user_metadata = 5;
}
